--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@mantine/core": "^8.3.3",
     "@mantine/hooks": "^8.3.3",
     "@mantine/next": "^6.0.22",
-    "@tabler/icons": "^3.35.0",
+    "@tabler/icons-react": "^3.35.0",
     "graphql": "^16.11.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "slugify-ts": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
