--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "codegen": "graphql-codegen --config codegen.ts",
+    "generate-component": "tsx utils/component-generator/generate-component.ts",
     "start": "next start",
     "lint": "eslint"
   },
@@ -18,6 +19,7 @@
     "@mantine/hooks": "^8.3.3",
     "@mantine/next": "^6.0.22",
     "@tabler/icons-react": "^3.35.0",
+    "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "next": "15.5.4",
     "react": "19.1.0",
@@ -39,7 +41,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
