--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@apollo/client-integration-nextjs": "^0.13.2",
     "@apollo/experimental-nextjs-app-support": "^0.13.2",
     "@eddeee888/gcg-operation-location-migration": "^0.1.0",
+    "@gsap/react": "^2.1.2",
     "@mantine/core": "^8.3.3",
     "@mantine/hooks": "^8.3.3",
     "@mantine/next": "^6.0.22",
     "@tabler/icons-react": "^3.35.0",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
+    "gsap": "^3.13.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
