--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "codegen.ts", "src/app/error.tsx.old"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "codegen.ts", "src/app/error.tsx.old", "src/app/[...uri]/template.tsx.f"],
   "exclude": ["node_modules"]
 }
