--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "eara-frontend",
   "version": "0.1.0",
   "private": true,
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
+  },
   "scripts": {
     "dev": "next dev --turbopack --hostname 0.0.0.0",
     "build": "next build --turbopack",
     "codegen": "graphql-codegen --config codegen.ts",
     "generate-component": "tsx utils/component-generator/generate-component.ts",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "prepare": "husky"
   },
   "dependencies": {
     "@apollo/client": "^4.0.7",
@@ -30,6 +42,7 @@
     "slugify-ts": "^1.1.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.1",
     "@eslint/eslintrc": "^3",
     "@graphql-codegen/cli": "^6.0.0",
     "@graphql-codegen/client-preset": "5.0.2",
@@ -37,16 +50,29 @@
     "@graphql-codegen/typescript": "^5.0.1",
     "@graphql-codegen/typescript-operations": "^5.0.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.3",
+    "@storybook/addon-a11y": "^9.1.13",
+    "@storybook/addon-docs": "^9.1.13",
+    "@storybook/addon-onboarding": "^9.1.13",
+    "@storybook/addon-vitest": "^9.1.13",
+    "@storybook/nextjs-vite": "^9.1.13",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "eslint": "^9.38.0",
     "eslint-config-next": "15.5.4",
+    "eslint-plugin-storybook": "^9.1.13",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.5",
+    "playwright": "^1.56.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "storybook": "^9.1.13",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
