--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{ts,tsx,js,jsx}": [
       "eslint --fix",
+      "organize-imports-cli",
       "prettier --write"
     ],
     "*.{json,css,md}": [
@@ -66,9 +67,11 @@
     "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.38.0",
     "eslint-config-next": "15.5.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-storybook": "^9.1.13",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.5",
+    "organize-imports-cli": "^0.10.0",
     "playwright": "^1.56.1",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
