--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-photo-album": "^3.2.0",
+    "react-photo-gallery": "^8.0.0",
     "rxjs": "^7.8.2",
-    "slugify-ts": "^1.1.0"
+    "slugify-ts": "^1.1.0",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
