--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "19.1.0",
     "react-photo-album": "^3.2.0",
     "react-photo-gallery": "^8.0.0",
+    "react-responsive-masonry": "^2.7.1",
     "rxjs": "^7.8.2",
     "slugify-ts": "^1.1.0",
     "yet-another-react-lightbox": "^3.25.0"
