--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "embla-carousel-react": "^8.5.2",
     "graphql": "^16.11.0",
     "gsap": "^3.13.0",
+    "html-react-parser": "^5.2.10",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
