--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_WORDPRESS_GRAPHQL_ENDPOINT=http://eara.local/graphql
+
+# Revalidation Secret (deve ser o mesmo no WordPress)
+# Gere um token forte: openssl rand -base64 32
+REVALIDATE_SECRET=seu_token_super_secreto_aqui_change_me
