--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,16 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "codegen.ts", "src/app/error.tsx.old", "src/app/[...uri]/template.tsx.f"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "codegen.ts",
+    "src/app/error.tsx.old",
+    "src/app/[...uri]/template.tsx.f",
+    "src/app/[...uri]/page.tsx",
+    "src/app/page.tsx.old"
+  ],
   "exclude": ["node_modules"]
 }
