--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mantine/core": "^8.3.3",
     "@mantine/hooks": "^8.3.3",
     "@mantine/next": "^6.0.22",
+    "@react-google-maps/api": "^2.20.8",
     "@tabler/icons-react": "^3.35.0",
     "clsx": "^2.1.1",
     "embla-carousel": "^8.5.2",
@@ -65,6 +66,7 @@
     "@storybook/addon-vitest": "^9.1.13",
     "@storybook/nextjs-vite": "^9.1.13",
     "@tailwindcss/postcss": "^4",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
