--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "src/**/*.d.ts",
     ".next/types/**/*.ts",
     "codegen.ts",
     "src/app/error.tsx.old",
