add general search

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ NEXT_PUBLIC_WORDPRESS_GRAPHQL_ENDPOINT=http://eara.local/graphql
 # Revalidation Secret (deve ser o mesmo no WordPress)
 # Gere um token forte: openssl rand -base64 32
 REVALIDATE_SECRET=seu_token_super_secreto_aqui_change_me
+
+NEXT_PUBLIC_ALGOLIA_APP_ID=
+NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
+NEXT_PUBLIC_ALGOLIA_INDEX_NAME=eara_global
