--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ REVALIDATE_SECRET=seu_token_super_secreto_aqui_change_me
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX_NAME=eara_global
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
