--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX_NAME=eara_global
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+MAILCHIMP_API_KEY=0f77f0cb951c2316b7c51180adf6eca0-us17
+MAILCHIMP_SERVER=us17
+MAILCHIMP_AUDIENCE_ID=dd9f5dfdc5
