--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,6 @@ NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX_NAME=eara_global
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
-MAILCHIMP_API_KEY=0f77f0cb951c2316b7c51180adf6eca0-us17
-MAILCHIMP_SERVER=us17
-MAILCHIMP_AUDIENCE_ID=dd9f5dfdc5
+MAILCHIMP_API_KEY=
+MAILCHIMP_SERVER=
+MAILCHIMP_AUDIENCE_ID=
