--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,6 @@ NEXT_PUBLIC_ALGOLIA_SEARCH_KEY=
 NEXT_PUBLIC_ALGOLIA_INDEX_NAME=eara_global
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
-MAILCHIMP_API_KEY=
-MAILCHIMP_SERVER=
-MAILCHIMP_AUDIENCE_ID=
+# MAILCHIMP_API_KEY=
+# MAILCHIMP_SERVER=
+# MAILCHIMP_AUDIENCE_ID=
